--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     rel="stylesheet"
     href="//fonts.googleapis.com/css?family=Didact+Gothic%7CRoboto:400%7CRoboto+Mono"
   />
-  <link rel="stylesheet" href="/css/aafu_dark.css" />
+  <link rel="stylesheet" href="/css/aafu_pinkish.css" />
   <link rel="stylesheet" href="/css/aafu.css" />
 
   <script>
@@ -56,7 +56,7 @@
       
       <div class="d-flex flex-row row p-2">
   <h3 class="main-menu mr-3">
-    <a href="https://www.example.org/">Home</a>
+    <a href="https://raphaeleguillemot.github.io">Home</a>
   </h3>
   <h3 class="main-menu mr-3">
     <a href="/blog">Blog</a>
@@ -86,7 +86,7 @@
   
   <div style="height:45px; width:45px;">
     <a href="https://www.linkedin.com/in/raphaele-guillemot-6a34271a8/">
-      <i class="zoomlink mt-1 fab fa-linkedin-in"></i>
+      <i class="zoomlink mt-1 fab fa-linkedin"></i>
     </a>
   </div>
   
@@ -251,7 +251,7 @@
       
 <dl>
   <dt>Visual Arts</dt>
-  <dd class="mb-0 ml-3">2018 - 2020 &middot; IBDP Programme</dd>
+  <dd class="mb-0 ml-3">2018 - 2020 &middot; IBDP Program</dd>
   
 </dl>
 
