--- a/public/index.html
+++ b/public/index.html
@@ -265,8 +265,8 @@
   
   <dd class="mb-0 ml-4">
     Thesis:
-    <a href="#"
-      ><i>Effect of humans on other humans: a study of human behavior.</i></a
+    <a href="tags/ibdp-visual-arts-hl"
+      ><i></i></a
     >
   </dd>
   
@@ -281,6 +281,13 @@
 <dl>
   <dt>Code Apps with C&#43;&#43;</dt>
   <dd class="mb-0 ml-3">July 2017 &middot; iD Tech Summer Program</dd>
+  
+  <dd class="mb-0 ml-4">
+    Thesis:
+    <a href="program/text-adventure-game/"
+      ><i></i></a
+    >
+  </dd>
   
 </dl>
 
