--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 <div class="mt-2 d-flex flex-wrap justify-content-center">
   
   <div style="height:45px; width:45px;">
-    <a href="/content/raphaeleg">
+    <a href="/raphaeleg.vcf">
       <i class="zoomlink mt-1 fab fa fa-id-card"></i>
     </a>
   </div>
