ssl please work

--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,12 @@
   </div>
   
   <div style="height:45px; width:45px;">
+    <a href="/index.xml">
+      <i class="zoomlink mt-1 fab fa fa-rss"></i>
+    </a>
+  </div>
+  
+  <div style="height:45px; width:45px;">
     <a href="https://www.linkedin.com/in/raphaele-guillemot-6a34271a8/">
       <i class="zoomlink mt-1 fab fa-linkedin"></i>
     </a>
