simple analytics badge

--- a/public/index.html
+++ b/public/index.html
@@ -386,6 +386,7 @@
     <script src="/js/accordion.js"></script>
   </div>
 </div>
+<a href="https://simpleanalytics.com/?utm_source=raphg.me&utm_content=badge" referrerpolicy="origin" target="_blank"><img src="https://simpleanalyticsbadge.com/raphg.me?mode=dark" id="simpleAnalyticsBadge" loading="lazy" referrerpolicy="no-referrer" crossorigin="anonymous" /></a>
 
     </main>
     
