--- a/public/gallery/beta-emelie/index.html
+++ b/public/gallery/beta-emelie/index.html
@@ -123,7 +123,12 @@
   </h3>
   <h3 class="mb-1 mt-1 text-left ml-4">
     
-    <i class="nav-menu-disabled fas fa-chevron-circle-right"></i>
+    <a
+      href="/gallery/okja/"
+      title="Okja"
+    >
+      <i class="nav-menu fas fa-chevron-circle-right"></i>
+    </a>
     
   </h3>
 </div>
