dscp updates (please work)

--- a/public/program/index.html
+++ b/public/program/index.html
@@ -84,6 +84,39 @@
 
   <div class="index-box p-3 shadow rounded mb-4">
     <h3>
+      <a href="/program/dscp/">Dim Sum Cultural Platform Website Commission</a>
+    </h3><div class="mb-2">
+  <p class="mb-1">September, 2020</p>
+   
+  
+  
+  
+  <p class="metadata-value mb-1 taxa taxa-container-div list-tags">
+    Tags: 
+    <a
+      class="pl-1 pr-1 rounded border border-secondary"
+      href="/tags/website"
+      title="tags"
+    >Website</a>
+    
+    <a
+      class="pl-1 pr-1 rounded border border-secondary"
+      href="/tags/hugo"
+      title="tags"
+    >Hugo</a>
+    
+  </p>
+  
+  
+</div>
+</div>
+
+
+  
+
+
+  <div class="index-box p-3 shadow rounded mb-4">
+    <h3>
       <a href="/program/slaughterhouse5/">Slaughterhouse-5 inspired prototype</a>
     </h3><div class="mb-2">
   <p class="mb-1">October, 2019</p>
