ok please woork dscp

--- a/public/gallery/expectation/index.html
+++ b/public/gallery/expectation/index.html
@@ -140,7 +140,7 @@
     
     <a
       href="/gallery/dscp/"
-      title="Dim Sum Cultural Platform Commission"
+      title="Dim Sum Cultural Platform Banner Commission"
     >
       <i class="nav-menu fas fa-chevron-circle-right"></i>
     </a>
