--- a/public/gallery/dscp/index.html
+++ b/public/gallery/dscp/index.html
@@ -79,7 +79,7 @@
       
 <div class="rounded p-2 aafu-border border">
   <div class="border-bottom aafu-border">
-    <h1 class="top-h1" style="font-size: 2.75em;">Dim Sum Cultural Platform Commission</h1><div class="mb-2">
+    <h1 class="top-h1" style="font-size: 2.75em;">Dim Sum Cultural Platform Banner Commission</h1><div class="mb-2">
   <p class="mb-1">September, 2020</p>
    
   
