--- a/public/program/dscp/index.html
+++ b/public/program/dscp/index.html
@@ -99,6 +99,12 @@
       title="tags"
     >Hugo</a>
     
+    <a
+      class="pl-1 pr-1 rounded border border-secondary"
+      href="/tags/commissions"
+      title="tags"
+    >Commissions</a>
+    
   </p>
   
   
