trying another approach, fixing link

--- a/public/program/dscp/index.html
+++ b/public/program/dscp/index.html
@@ -112,7 +112,7 @@
 </div>
   <div class="content">
     <h1 id="httpsdimsumculturecompany"><a href="https://dimsumculture.company">https://dimsumculture.company</a></h1>
-<p>I was commissioned to create a chinese culture business website for my client. I also drew the commissioned <a href="" title="banner picture">banner picture</a>. I used Hugo, the same approach I used for this website.</p>
+<p>I was commissioned to create a chinese culture business website for my client. I also drew the commissioned <a href="https://raphg.me/gallery/dscp/" title="banner picture">banner picture</a>. I used Hugo, the same approach I used for this website.</p>
 
   </div>
 </div>
@@ -120,8 +120,8 @@
   <h3 class="mb-1 mt-1 text-left mr-4">
     
     <a
-      href="/program/slaughterhouse5/"
-      title="Slaughterhouse-5 inspired prototype"
+      href="/program/dscpwebsite/"
+      title="Dim Sum Cultural Platform Website Commission"
     >
       <i class="nav-menu fas fa-chevron-circle-left"></i>
     </a>
