--- a/public/program/slaughterhouse5/index.html
+++ b/public/program/slaughterhouse5/index.html
@@ -125,7 +125,7 @@
   <h3 class="mb-1 mt-1 text-left ml-4">
     
     <a
-      href="/program/dscp/"
+      href="/program/dscpwebsite/"
       title="Dim Sum Cultural Platform Website Commission"
     >
       <i class="nav-menu fas fa-chevron-circle-right"></i>
